This is a summary of the changes in KTIGCC since the first alpha release:

CVS HEAD (2007-05-14):

* Added a full changelog (generated from CVS logs).
* Fixed stray indentation at the end of the line when autoclosing a curly brace
  as ENTER is pressed.
* Ported to KDE 3.90.1.
* Fixed highlighting update when moving a file to Header Files from another
  editable category. (The first character was read from the wrong buffer.)
* Don't hardcode ~/.kde for the KDE(4)HOME directory.
* Fixed missing word wrap on the data variable reloc label in Program Options.
* Fixed A68k items in the New menu being shown even when A68k is not installed.
* Don't grab the keyboard globally (stealing key presses from other apps) in the
  Errors&Warnings pane, only override the Ctrl+C and Ctrl+Ins accelerators.
* Fixed adding to the recent file list getting confused by changes to the list
  from other KTIGCC instances.
* Fixed the wrong recent file getting opened when opening triggers save prompt.


KTIGCC 1.06 (2006-11-25):

* Added Anjuta 2 project, removed Anjuta 1 project.
* Fixed missing layout in the Operating System tab of the Program Options
  dialog.
* Fixed wrong length computations when writing to a file in UTF-8 or other
  multibyte charsets. (This broke debugging information for projects in a path
  containing non-ASCII characters.)
* Added tas to the default Integer Arithmetic instructions.
* Added xdef, globl, altmacro and noaltmacro to the default GNU as directives.
* Ctrl+Tab/Ctrl+G now skips the project root and the categories.
* When saving a project for the first time, if it is still named "Project1", a
  name based on the .tpr file name is now set (as in TIGCC IDE).
* Disabled debugging and informational messages from libti*.


KTIGCC 1.05 (2006-10-24):

* Added missing -lkdeui to link line (needed for OS X).
* Fixed RPM specfile dependency to work on FC6.


KTIGCC 1.04 (2006-09-25):

* Use explicit memset to zero the buffer in loadFileText because the C++ way