@@ -1,6 +1,6 @@
 This is a summary of the changes in KTIGCC since the first alpha release:
 
-CVS HEAD (2007-05-14):
+CVS HEAD (2007-06-17):
 
 * Added a full changelog (generated from CVS logs).
 * Fixed stray indentation at the end of the line when autoclosing a curly brace
@@ -16,6 +16,9 @@ CVS HEAD (2007-05-14):
 * Fixed adding to the recent file list getting confused by changes to the list
   from other KTIGCC instances.
 * Fixed the wrong recent file getting opened when opening triggers save prompt.
+* Now using the builtin pucrunch support in the latest ld-tigcc instead of
+  ttpack and ttbin2oth. This also adds support for outputting unwrapped binaries
+  for compressed files.
 
 
 KTIGCC 1.06 (2006-11-25):
